# macbrew

./: .gitignore  Cargo.toml  Cross.toml  LICENCE  README.md  macbrew.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
Images/: README.md  basilisk_ii_prefs  build-code-image.sh  pull-code-from-image.sh  start.sh  system710-macbrew-dev.image  test.sh
brew-proxy/: Cargo.toml
brew-proxy/src/: main.rs
include/: MacIncludes.h  README.md
macbrew-proxy/: .gitignore  Cargo.toml
macbrew-proxy/.devcontainer/: Dockerfile  devcontainer.json
macbrew-proxy/.github/workflows/: checks.yml
macbrew-proxy/resources/: sample_fermentation.json  sample_fermentation_manual.json  sample_recipe.xml  sample_session.json  sample_sessions.json
macbrew-proxy/src/: error.rs  main.rs  utils.rs
macbrew-proxy/src/codecs/: line_codec.rs  mod.rs
macbrew-proxy/src/commands/: command.rs  get_fermentation.rs  get_recipes.rs  get_sessions.rs  help.rs  list_sessions.rs  list_steps.rs  mod.rs  ping.rs
macbrew-proxy/src/data/: api_data_manager.rs  data_manager.rs  mod.rs  recipes.rs  sessions.rs
macbrew-proxy/src/data/brewers_friend/: bf_api_data_manager.rs  bf_data_manager.rs  fermentation.rs  mod.rs  recipes.rs  sessions.rs
macbrew-proxy/src/data/macbrew/: fermentation.rs  mod.rs  recipes.rs  sessions.rs  shared.rs  steps.rs
macbrew-proxy/src/serializers/: mac.rs
macbrew-proxy/src/snapshots/: brew_proxy__tests__get_recipe.snap  macbrew_proxy__tests__command_error.snap  macbrew_proxy__tests__empty_command.snap  macbrew_proxy__tests__get_fermentation.snap  macbrew_proxy__tests__get_fermentation_manual.snap  macbrew_proxy__tests__get_recipe.snap  macbrew_proxy__tests__get_sessions.snap  macbrew_proxy__tests__invalid_command.snap  macbrew_proxy__tests__list_sessions.snap  macbrew_proxy__tests__list_steps.snap  macbrew_proxy__tests__ping.snap
macbrew-ui/: MacBrewUI.r  macbrew.c  mbConstants.h  mbDSessionList.c  mbDSessionList.h  mbDataManager.c  mbDataManager.h  mbDialogUtils.c  mbDialogUtils.h  mbListUtils.c  mbListUtils.h  mbMenus.c  mbMenus.h  mbSerial.c  mbSerial.h  mbTypes.h  mbUtil.c  mbUtil.h  mbWSessionList.c  mbWSessionList.h  mbWSplash.c  splash  (+7 more)
(+10 files in other folders)
