[package]
name = "brew-proxy"
version = "0.1.0"
authors = ["Sean Dawson <contact@seandawson.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13.4", default-features = false, features = ["tcp"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
tokio-serial = "4.3.3"
encoding = "0.2.33"
tokio-util = { version = "0.3.1", features = ["codec"], default-features = false }
futures = "0.3.8"
bytes = "0.5"
async-trait = "0.1.42"
snafu = "0.6.10"