[package]
name = "macbrew-proxy"
version = "0.1.4"
authors = ["Sean Dawson <contact@seandawson.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
tokio = { version = "0.2", features = ["full"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
tokio-serial = { version = "4.3.3", default-features = false }
encoding = "0.2.33"
tokio-util = { version = "0.3.1", features = ["codec"], default-features = false }
futures = "0.3.21"
bytes = "0.5"
async-trait = "0.1.50"
snafu = "0.6.10"
quick-xml = { version = "0.22", features = [ "serialize" ] }
hexplay = "0.2.1"
chrono = "0.4"

[dev-dependencies]
mockito = "0.30.0"
insta = "1.7.1"
tokio-test = "0.4.2"
